Final footer align fix

--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -7,6 +7,7 @@
 }
 
 footer {
+  padding-left: 3%;
   p {
     color: $charcoal;
   }
@@ -14,10 +15,10 @@ footer {
     list-style-type: none;
   }
   #site-map {
-    padding-left: 20%;
+    padding-left: 25%;
   }
   .left-padding {
-    padding-left: 5%;
+    padding-left: 4%;
   }
 }
 
@@ -33,7 +34,6 @@ footer {
 
 @media (max-width: 768px) {
   footer {
-    padding-left: 3%;
     ul {
       padding-left: 0;
     }
